v0.76.1:
    - Fixed error with '/town buy' granting the wrong number of blocks.
    - Fixed converting seconds to milliseconds for mobremoval and new day timers.
    - Fixed an error when using '/town claim #'.
    - Fixed an error with '/town claim auto' (I broke it fixing the above command).
    - Explosions in the nether caused by using beds are now blocked if a town is there and set to block explosions. However, the fires it generates can not be blocked.
    - Added (Online) to title Resident Status
    - Added Neutral in Nation status.
    - Moved /nation set neutral [on/off] to /nation toggle neutral
    - Added plot regeneration.
      When a town plot is unclaimed (by a player or through upkeep) it will slowly begin to revert to a pre town state.
      Blocks will slowly change back to whatever blocks we're present at the moment the town block was claimed.
      You can configure certain block types you don't want restored to prevent players exploiting regen for diamond ores.
      Block types to not restore are configured in block_ignore in the worlds txt file data/worlds/worldname.txt
    - Added a block deletion function to remove specified blocks when a town block becomes unclaimed.
      This is useful for removing Lockette/Deadbolt signs on doors and chests.
      Block types to remove are configured in unclaim_delete in the worlds txt file data/worlds/worldname.txt
    - Removed the commands '/town add+' and '/town kick+'. Use '/town add' and '/town kick'.
    - Removed + commands from '/town assistant [.add/remove]'.
    - Fixed when players are added to the default town they are unable to use '/town leave'.
    - Town data files should now be correctly deleted (moved to the deleted folder) upon removal.
    - Added a max_tax_amount and max_tax_percent to the config for towns. Defaults to 1000 and 25% respetively.
      Which one is used depends on how the town is taxing; flat rate or by percentage.