@@ -29,7 +29,7 @@ public class Nation extends TownyIConomyObject implements ResidentList {
         }
         
         public void setTag(String text) throws TownyException {
-        	if (tag.length() > 4)
+        	if (text.length() > 4)
         		throw new TownyException("Tag too long");
     		if (tag.matches(" "))
     			tag = "";
