@@ -66,7 +66,7 @@ public class Town extends TownBlockOwner implements Walled, ResidentList {
         }
         
         public void setTag(String text) throws TownyException {
-        	if (tag.length() > 4)
+        	if (text.length() > 4)
         		throw new TownyException("Tag too long");
     		if (tag.matches(" "))
     			tag = "";
